; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5421.c_ad5421_write_unlocked.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5421.c_ad5421_write_unlocked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.ad5421_state = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, i32, i32)* @ad5421_write_unlocked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad5421_write_unlocked(%struct.iio_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.iio_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ad5421_state*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.iio_dev*, %struct.iio_dev** %4, align 8
  %9 = call %struct.ad5421_state* @iio_priv(%struct.iio_dev* %8)
  store %struct.ad5421_state* %9, %struct.ad5421_state** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = shl i32 %10, 16
  %12 = load i32, i32* %6, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @cpu_to_be32(i32 %13)
  %15 = load %struct.ad5421_state*, %struct.ad5421_state** %7, align 8
  %16 = getelementptr inbounds %struct.ad5421_state, %struct.ad5421_state* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  store i32 %14, i32* %19, align 8
  %20 = load %struct.ad5421_state*, %struct.ad5421_state** %7, align 8
  %21 = getelementptr inbounds %struct.ad5421_state, %struct.ad5421_state* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = load %struct.ad5421_state*, %struct.ad5421_state** %7, align 8
  %24 = getelementptr inbounds %struct.ad5421_state, %struct.ad5421_state* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i64 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 1
  %30 = call i32 @spi_write(i32 %22, i32* %29, i32 3)
  ret i32 %30
}

declare dso_local %struct.ad5421_state* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @cpu_to_be32(i32) #1

declare dso_local i32 @spi_write(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
